routes small changes made
